Legend:

[+] New/improved feature 
[B] Bug fixed
[K] Known issue
[O] Other

Change log
==========

v0.5.3

[B][gnu-linux][gnu-linux-dpdk] Prevent IPv4 fragments to be classified beyond IP

v0.5.2

[B][CMM] Fixed issue #40 (bug) => invalid table-features-stats messages generated

v0.5.1

[+] Distributing default xdpd.conf during `make install`

[+][gnu-linux][gnu-linux-dpdk] GTP push/pop actions revised
[B][gnu-linux][gnu-linux-dpdk] Fixed stored buffer leak during LSI destruction
[B][gnu-linux][gnu-linux-dpdk] preserve checksum calculation flags in function hal_driver_of1x_process_packet_out
[B][gnu-linux-dpdk] Fixed functions push() and pop() in dpdk_datapacket


v0.5.0

[+] OF1.3 support marked as stable
[+] Changed default logging level from NOTICE(5) to ERROR (3)
[+][CMM] Added per LSI Packet In Rate Limiter(PIRL) functionality and config plugin support.
[+][CMM] Added switch_manager::get_switch_table_flows() to switch_manager #21 
[+][CMM] Adding port_manager::is_vlink(), port_manager::get_port_info() and port_manager::get_vlink_pair() #17 

[+][drivers] Added packet_proto_meta_imp.h to increase code re-usage (to be used with the default classifier)
[+][drivers] Implemented new optimized c_types_pktclassifier for sw drivers

[+][gnu-linux] Filtering loopback interface from available interfaces list #33

[+][gnu-linux][gnu-linux-dpdk] Performance optimizations 
[+][gnu-linux][gnu-linux-dpdk] Implemented COPY_TTL_IN/COPY_TTL_OUT between IP and MPLS
[+][gnu-linux][gnu-linux-dpdk] Added SCTP support 
[+][gnu-linux][gnu-linux-dpdk] Added PBB support 
[+][gnu-linux][gnu-linux-dpdk] Increased default supported num. of MPLS labels to 32

[B][gnu-linux][gnu-linux-dpdk] Fixed bug during replication of packets


v0.4.7

[B][CMM] Fixing reverse packet matches bug in ARP values for OF1.2/OF1.3

v0.4.6
v0.4.5
v0.4.4

[B] Fix compile errors on older gcc (e.g. v4.4) and old kernels (up to 2.6) where TP_STATUS_VLAN_VALID was not defined
